--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <title>Brand Shop</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">
-            <a href="index.html">
-                <img src="" alt="Brand_Logo">
-                <p>Bran<span>d</span></p>
-            </a>
-        </div>
+    <div class="width-site">
+        <header class="header">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="img/logo.png" alt="Brand_Logo">
+                    <p>Bran<span>d</span></p>
+                </a>
+            </div>
+            <div class="search">
+                <details>
+                    <summary>Browse</summary>
+                </details>
+                <form action="#">
+                    <input type="search" placeholder="Search for Item...">
+                </form>
+                <a href="#"><img src="img/magnifier.png" alt="Search"></a>
+            </div>
+            <div class="cart_MyAcc">
+                <a href="#"><img src="img/cart.png" alt="Cart"></a>
+                <details>
+                    <summary>My Account</summary>
+                </details>
+            </div>
     </header>
+    </div>
 </body>
 
 </html>
