--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
                 </details>
             </div>
     </header>
+    <nav class="nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Man</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Kids</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Featured</a></li>
+            <li><a href="#">Hot Deals</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="slider">
+            <div class="slider-text">
+                <h2>the brand</h2>
+            <p>of luxerious <span>fashion</span></p>
+            </div>
+        </div>
+    </main>
     </div>
 </body>
 
