--- a/index.html
+++ b/index.html
@@ -33,26 +33,48 @@
                     <summary>My Account</summary>
                 </details>
             </div>
-    </header>
-    <nav class="nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Man</a></li>
-            <li><a href="#">Women</a></li>
-            <li><a href="#">Kids</a></li>
-            <li><a href="#">Accessories</a></li>
-            <li><a href="#">Featured</a></li>
-            <li><a href="#">Hot Deals</a></li>
-        </ul>
-    </nav>
-    <main>
-        <div class="slider">
-            <div class="slider-text">
-                <h2>the brand</h2>
-            <p>of luxerious <span>fashion</span></p>
+        </header>
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Man</a></li>
+                <li><a href="#">Women</a></li>
+                <li><a href="#">Kids</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Featured</a></li>
+                <li><a href="#">Hot Deals</a></li>
+            </ul>
+        </nav>
+        <main>
+            <div class="slider">
+                <div class="slider_text">
+                    <h2>the brand</h2>
+                    <p>of luxerious <span>fashion</span></p>
+                </div>
             </div>
-        </div>
-    </main>
+            <div class="advertising">
+                <div class="pic_1">
+                    <div class="text_pic">
+                        <p>hot deal <br><span>for men</span></p>
+                    </div>
+                </div>
+                <div class="pic_2">
+                    <div class="text_pic">
+                        <p>30% offer <br><span>women</span></p>
+                    </div>
+                </div>
+                <div class="pic_3">
+                    <div class="text_pic">
+                        <p>luxirous & trendy <br><span>aceesories</span></p>
+                    </div>
+                </div>
+                <div class="pic_4">
+                    <div class="text_pic">
+                        <p>new arrivals <br><span>for kids</span></p>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 
