--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                     </div>
                 </div>
             </div>
+            <div class="prod_heading">
+                <h3>Featured Items</h3>
+                <p>Shop for items based on what we featured on this week</p>
+            </div>
         </main>
     </div>
 </body>
