taets new branch

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                 <h3>Featured Items</h3>
                 <p>Shop for items based on what we featured on this week</p>
             </div>
+            <div class="products_to_buy">
+                <a href="#">
+                    <img src="./img/products_to_buy/prod_1.jpg" alt="Profuct 1">
+                    <p>Mango People T-shirt<br><span>$52.00</span></p>
+                </a>
+            </div>
         </main>
     </div>
 </body>
