need to do button on hover

--- a/index.html
+++ b/index.html
@@ -1,91 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Brand Shop</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="width-site">
-        <header class="header">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="img/logo.png" alt="Brand_Logo">
-                    <p>Bran<span>d</span></p>
-                </a>
+      <header class="header">
+        <div class="logo">
+          <a href="index.html">
+            <img src="img/logo.png" alt="Brand_Logo" />
+            <p>Bran<span>d</span></p>
+          </a>
+        </div>
+        <div class="search">
+          <details>
+            <summary>Browse</summary>
+          </details>
+          <form action="#">
+            <input type="search" placeholder="Search for Item..." />
+          </form>
+          <a href="#"><img src="img/magnifier.png" alt="Search" /></a>
+        </div>
+        <div class="cart_MyAcc">
+          <a href="#"><img src="img/cart.png" alt="Cart" /></a>
+          <details>
+            <summary>My Account</summary>
+          </details>
+        </div>
+      </header>
+      <nav class="nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Man</a></li>
+          <li><a href="#">Women</a></li>
+          <li><a href="#">Kids</a></li>
+          <li><a href="#">Accessories</a></li>
+          <li><a href="#">Featured</a></li>
+          <li><a href="#">Hot Deals</a></li>
+        </ul>
+      </nav>
+      <main>
+        <div class="slider">
+          <div class="slider_text">
+            <h2>the brand</h2>
+            <p>of luxerious <span>fashion</span></p>
+          </div>
+        </div>
+        <div class="advertising">
+          <div class="pic_1">
+            <div class="text_pic">
+              <p>hot deal <br /><span>for men</span></p>
             </div>
-            <div class="search">
-                <details>
-                    <summary>Browse</summary>
-                </details>
-                <form action="#">
-                    <input type="search" placeholder="Search for Item...">
-                </form>
-                <a href="#"><img src="img/magnifier.png" alt="Search"></a>
+          </div>
+          <div class="pic_2">
+            <div class="text_pic">
+              <p>30% offer <br /><span>women</span></p>
             </div>
-            <div class="cart_MyAcc">
-                <a href="#"><img src="img/cart.png" alt="Cart"></a>
-                <details>
-                    <summary>My Account</summary>
-                </details>
+          </div>
+          <div class="pic_3">
+            <div class="text_pic">
+              <p>luxirous & trendy <br /><span>aceesories</span></p>
             </div>
-        </header>
-        <nav class="nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Man</a></li>
-                <li><a href="#">Women</a></li>
-                <li><a href="#">Kids</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">Featured</a></li>
-                <li><a href="#">Hot Deals</a></li>
-            </ul>
-        </nav>
-        <main>
-            <div class="slider">
-                <div class="slider_text">
-                    <h2>the brand</h2>
-                    <p>of luxerious <span>fashion</span></p>
-                </div>
+          </div>
+          <div class="pic_4">
+            <div class="text_pic">
+              <p>new arrivals <br /><span>for kids</span></p>
             </div>
-            <div class="advertising">
-                <div class="pic_1">
-                    <div class="text_pic">
-                        <p>hot deal <br><span>for men</span></p>
-                    </div>
-                </div>
-                <div class="pic_2">
-                    <div class="text_pic">
-                        <p>30% offer <br><span>women</span></p>
-                    </div>
-                </div>
-                <div class="pic_3">
-                    <div class="text_pic">
-                        <p>luxirous & trendy <br><span>aceesories</span></p>
-                    </div>
-                </div>
-                <div class="pic_4">
-                    <div class="text_pic">
-                        <p>new arrivals <br><span>for kids</span></p>
-                    </div>
-                </div>
-            </div>
-            <div class="prod_heading">
-                <h3>Featured Items</h3>
-                <p>Shop for items based on what we featured on this week</p>
-            </div>
-            <div class="products_to_buy">
-                <a href="#">
-                    <img src="./img/products_to_buy/prod_1.jpg" alt="Profuct 1">
-                    <p>Mango People T-shirt<br><span>$52.00</span></p>
-                </a>
-            </div>
-        </main>
+          </div>
+        </div>
+        <div class="prod_heading">
+          <h3>Featured Items</h3>
+          <p>Shop for items based on what we featured on this week</p>
+        </div>
+        <div class="products_to_buy"></div>
+      </main>
     </div>
-</body>
-
+  </body>
 </html>
